test/good/automatic/base/without_input/ret_nonzero/0006.lat
// bad return # 1

int main() {
  error();
}