test/bad/automatic/base/compile_time/0045.lat
int main() {
    10 = 20;
    return 1;
}